Estrura montada e Api usuario feita

--- a/back/package.json
+++ b/back/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "back",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./index.js"
   },
-  "author": "",
+  "author": "Arthur, Gustavo e Matheus",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
