--- a/back/package.json
+++ b/back/package.json
@@ -9,7 +9,9 @@
   "author": "Arthur, Gustavo e Matheus",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3"
   },
   "devDependencies": {
